GP grammar implemented